@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libIDL/libIDL-0.8.0.ebuild,v 1.2 2002/08/01 18:02:36 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libIDL/libIDL-0.8.0.ebuild,v 1.3 2002/08/02 19:34:18 gerk Exp $
 
 # Do _NOT_ strip symbols in the build! Need both lines for Portage 1.8.9+
 DEBUG="yes"
@@ -16,7 +16,7 @@ HOMEPAGE="http://www.gnome.org"
 
 SLOT="0"
 LICENSE="LGPL-2.1"
-KEYWORDS="x86"
+KEYWORDS="x86 ppc"
 
 RDEPEND=">=dev-libs/glib-2.0.0
 	>=sys-devel/flex-2.5.4"
